# cdffs

./: .coveragerc  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  codeql-analysis.yaml  publish.yaml
cognite/cdffs/: __init__.py  az_upload_strategy.py  credentials.py  file_handler.py  gcp_upload_strategy.py  memory_upload_strategy.py  spec.py  upload_strategy.py
docs/: requirements.txt
docs/source/: api.rst  authentication.rst  cdffs.rst  conf.py  examples.rst  guidelines.rst  index.rst
examples/: dask_csv.py  geopandas_parquet.py  pandas_csv.py  xarray_zarr.py  zip.py
tests/: conftest.py  test_spec.py  test_spec_integration.py
