[tool.poetry]
name = "cognite-cdffs"
version = "0.3.2"
description = "File System Interface for CDF Files"
license = "Apache-2.0"
authors = ["Infant Alex <infant.alex@cognite.com>"]
readme = "README.md"
packages = [
    { include="cognite", from="." },
]
[tool.poetry.group.test.dependencies]
pandas = "^2.1.3"
pyarrow = "^14.0.1"
zarr = "^2.16.1"
dask = "^2023.11.0"
xarray = "^2023.11.0"
geodatasets = "^2023.3.0"
geopandas = "^0.14.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.5"
pytest-cov = "^4.1.0"
black = "^23.11.0"
responses = "^0.24.1"
flake8 = "^6.1.0"
pre-commit = "^3.2.2"
flake8-pyproject = "^1.2.3"
twine = "^4.0.2"
toml = "^0.10.2"
sphinx-rtd-theme = "^1.2.2"

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = []
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38

[tox]
isolated_build = true
envlist = py38

[testenv]
deps =
    pytest
    pytest-cov

commands =
    coverage run --source cognite -m pytest -v tests
    coverage xml
"""

[tool.poetry.dependencies]
python = ">=3.9.10,<3.13"
cognite-sdk = "^7.3.1"
fsspec = "^2023.10.0"
requests = "^2.31.0"
twine = "^4.0.2"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
tenacity = "^8.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
