[tool.poetry]
name = "cognite-cdffs"
version = "0.3.7"
description = "File System Interface for CDF Files"
license = "Apache-2.0"
authors = ["Infant Alex <infant.alex@cognite.com>"]
readme = "README.md"
packages = [
    { include="cognite", from="." },{ include="vendor", from="." }
]

[tool.poetry.group.test.dependencies]
pandas = "^2.2.2"
pyarrow = "^15.0.2"
zarr = "^2.18.2"
dask = {version = "^2024.3.1", extras = ["dataframe"]}
xarray = "^2024.7.0"
geodatasets = "^2023.12.0"
geopandas = "^1.0.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240218"
pytest-cov = "^5.0.0"
black = "^24.8.0"
responses = "^0.25.3"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
flake8-pyproject = "^1.2.3"
toml = "^0.10.2"
sphinx-rtd-theme = "^2.0.0"

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = []
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38

[tox]
isolated_build = true
envlist = py38

[testenv]
deps =
    pytest
    pytest-cov

commands =
    coverage run --source cognite -m pytest -v tests
    coverage xml
"""

[tool.poetry.dependencies]
python = ">=3.9.10,<3.13"
cognite-sdk = "^7.32.0"
fsspec = "^2024.3.1"
requests = "^2.31.0"
twine = "^5.0.0"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
